--- a/src/main/resources/com/example/elmat3am/Location.fxml
+++ b/src/main/resources/com/example/elmat3am/Location.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="location-bgcolor" stylesheets="@../../../values/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="location-bgcolor" stylesheets="@../../../values/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elmat3am.Controller">
    <center>
       <StackPane BorderPane.alignment="CENTER">
          <children>
@@ -38,6 +39,11 @@
                         <Image url="@../../../images/Icons/LocationRedWithBorders.png" />
                      </image>
                   </ImageView>
+                  <HBox alignment="CENTER" layoutX="538.0" layoutY="139.0" prefHeight="150.0" prefWidth="62.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#switchToFoodMenu" prefHeight="150.0" prefWidth="47.0" styleClass="menu-button-inactive" stylesheets="@../../../values/styles.css" text="Back&#10;To&#10;Menu" textAlignment="CENTER" textFill="WHITE" />
+                     </children>
+                  </HBox>
                </children>
             </AnchorPane>
          </children>
